# meridian-core

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-shared-domain-vs-monorepo.md
src/meridian/: __init__.py  __main__.py  synthetic.py
tests/: test_synthetic.py
