[project]
name = "meridian-core"
version = "0.3.0"
description = "Single source of truth for the Meridian fictional marketplace domain"
requires-python = ">=3.12"
dependencies = [
    "faker>=30.0",
    "polars>=1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/F pyflakes+pycodestyle, I isort, UP pyupgrade, B bugbear, SIM simplify
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --cov=src --cov-report=term-missing"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meridian"]
